cheatsheet/编程笔记/kernel/txt/paper.txt
  (replace "intel64" with "ia32" if you are using a 32-bit platform).
     For csh/tcsh:
        $ source install-dir/bin/compilervars.csh intel64
     For bash:
        $ source install-dir/bin/compilervars.sh intel64
     To invoke the installed compilers:
        For C++: icpc
        For C: icc
        For Fortran: ifort

source /opt/intel/composerxe-2011.3.174/bin/compilervars.sh intel64

add to ~/.bashrc

ok not determined the system, just skip

[cim@localhost FVCOM_source]$ make
/usr/bin/cpp -P -C -traditional  -DINTEL  -P -C -traditional    -DWET_DRY -DMULTIPROCESSOR  -DNETCDF_IO   -DGCN      -DMPDATA       -DSEDIMENT         -DLIMITED_NO -I/usr/local/netcdf/include     mod_prec.F > mod_prec.f90
ifort -I/usr/include  -c  -O2   -I/usr/local/netcdf/include     mod_prec.f90 
mod_prec.f90(6): error #7002: Error in opening the compiled module file.  Check INCLUDE paths.   [MPI]
   use mpi
-------^
mod_prec.f90(15): error #6592: This symbol must be a defined parameter, an enumerator, or an argument of an inquiry function that evaluates to a compile-time constant.   [MPI_REAL]
   INTEGER, PARAMETER :: MPI_F = MPI_REAL
---------------------------------^
mod_prec.f90(29): error #6592: This symbol must be a defined parameter, an enumerator, or an argument of an inquiry function that evaluates to a compile-time constant.   [MPI_DOUBLE_PRECISION]
   INTEGER, PARAMETER :: MPI_DP = MPI_DOUBLE_PRECISION
----------------------------------^
mod_prec.f90(15): error #6404: This name does not have a type, and must have an explicit type.   [MPI_REAL]
   INTEGER, PARAMETER :: MPI_F = MPI_REAL
---------------------------------^
mod_prec.f90(29): error #6404: This name does not have a type, and must have an explicit type.   [MPI_DOUBLE_PRECISION]
   INTEGER, PARAMETER :: MPI_DP = MPI_DOUBLE_PRECISION
----------------------------------^
compilation aborted for mod_prec.f90 (code 1)
make: *** [mod_prec.o] Error 1

mpich2:
    export CC=icc CXX=icpc AR=xiar
    sudo mkdir /opt/mpi
    ./configure --prefix=/opt/mpi
    in generated Makefile, check FC 
    no need set FC/F90
        configure: error: F90 and F90FLAGS are replaced by FC and FCFLAGS respectively in this configure, please unset F90/F90FLAGS and set FC/FCFLAGS instead and rerun configure again.
    ifort is default


/usr/bin/cpp -P -C -traditional  -DINTEL  -P -C -traditional    -DWET_DRY -DMULTIPROCESSOR  -DNETCDF_IO   -DGCN      -DMPDATA       -DSEDIMENT         -DLIMITED_NO -I/usr/local/netcdf/include     mod_ncdio.F > mod_ncdio.f90
ifort -I/opt/mpi/include  -c  -O2   -I/usr/local/netcdf/include     mod_ncdio.f90 
mod_ncdio.f90(48): error #7013: This module file was not generated by any release of this compiler.   [NETCDF]
   USE netcdf
-------^
mod_ncdio.f90(156): error #6404: This name does not have a type, and must have an explicit type.   [NF90_NOERR]
   if(status /=nf90_noerr)then
---------------^
mod_ncdio.f90(158): error #6404: This name does not have a type, and must have an explicit type.   [NF90_STRERROR]
     write(ipt,*)trim(nf90_strerror(status))
----------------------^
mod_ncdio.f90(158): error #6362: The data types of the argument(s) are invalid.   [TRIM]
     write(ipt,*)trim(nf90_strerror(status))
----------------------^
mod_ncdio.f90(345): error #6632: Keyword arguments are invalid without an explicit interface.   [PATH]
   ierr = nf90_create(path=cdfname,cmode=nf90_clobber,ncid=nc_ofid)
----------------------^
mod_ncdio.f90(345): error #6632: Keyword arguments are invalid without an explicit interface.   [CMODE]
   ierr = nf90_create(path=cdfname,cmode=nf90_clobber,ncid=nc_ofid)
-----------------------------------^
mod_ncdio.f90(345): error #6404: This name does not have a type, and must have an explicit type.   [NF90_CLOBBER]
   ierr = nf90_create(path=cdfname,cmode=nf90_clobber,ncid=nc_ofid)
-----------------------------------------^
mod_ncdio.f90(345): error #6632: Keyword arguments are invalid without an explicit interface.   [NCID]
   ierr = nf90_create(path=cdfname,cmode=nf90_clobber,ncid=nc_ofid)
------------------------------------------------------^
mod_ncdio.f90(345): error #6404: This name does not have a type, and must have an explicit type.   [NF90_CREATE]
   ierr = nf90_create(path=cdfname,cmode=nf90_clobber,ncid=nc_ofid)
----------^
mod_ncdio.f90(346): error #6404: This name does not have a type, and must have an explicit type.   [NF90_EEXIST]
   if(ierr /= nf90_eexist)then
--------------^
mod_ncdio.f90(355): error #6404: This name does not have a type, and must have an explicit type.   [NF90_GLOBAL]
   ierr = nf90_put_att(nc_ofid,nf90_global,"title"      ,trim(casetitle))
-------------------------------^

netcdf:
   ./configure --prefix=/usr    (default to /usr/local, it's a bad choice) 
    *** Test: varm on URL: http://motherlode.ucar.edu:8080/thredds/dodsC/testdods/coads_climatology.nc
    error: NetCDF: I/O failure at test_varm3.c:91
    FAIL: test_varm3
    Error: NetCDF: I/O failure
    FAIL: test_vara
    *** PASSED: 2/2 ; 0 expected failures ; 0 unexpected failures
    2 failures from unavailable server
    Error:  :curl error: Couldn't resolve host name
    Warning::oc_open: Could not read url

metis:
    CC=icc, AR=xiar rv (from ar rv)
    icc   -O2 -I. -c subdomains.c
    ./proto.h(462): warning #147: declaration is incompatible with "double __log2(double)" (declared at line 145 of "/usr/include/bits/mathcalls.h")
      int log2(int);
          ^
    icc regard it as warning, while gcc as error

mod_sed.F:
    mod_sed.o: In function `mod_sed_mp_advance_sed_':
    mod_sed.f90:(.text+0xf643): undefined reference to `erosion_'
    mod_sed.o: In function `mod_sed_mp_calc_erosion_':
    mod_sed.f90:(.text+0x12674): undefined reference to `erosion_'
    real(sp) :: bed_por,bed_frac,tau_w,tau_ce,erate,dep,erosion,active


not found
ldconfig
	libnetcdff.so.5 => /usr/lib/libnetcdff.so.5 (Not Found)
	libnetcdf.so.7 => /usr/lib/libnetcdf.so.7 (Not Found)
ldd fvcom | grep netcdf
	libnetcdff.so.5 => /usr/lib/libnetcdff.so.5 (0x00002b06e9816000)
	libnetcdf.so.7 => /usr/lib/libnetcdf.so.7 (0x00002b06e9c66000)

PATH=/opt/mpi/bin:$PATH mpich2version
[cim@localhost run]$ mpich2version
MPICH2 Version:    	1.3.2p1
MPICH2 Release date:	Mon Feb 14 19:07:22 CST 2011
MPICH2 Device:    	ch3:nemesis
MPICH2 configure: 	--prefix=/opt/mpi
MPICH2 CC: 	icc    -O2
MPICH2 CXX: 	icpc   -O2
MPICH2 F77: 	ifort   -O2
MPICH2 FC: 	ifort   -O2

no mpd & at all

ulimit -s unlimited


gnuplot:
    numpy
    python setup.py install
    python demo.py
